templates/common-test_template.yaml
---
# Source: common-test/templates/common.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-common-test
  labels:
    helm.sh/chart: common-test-1.0.4
    app.kubernetes.io/name: common-test
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: common-test
    app.kubernetes.io/instance: release-name
---
# Source: common-test/templates/common.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-common-test
  labels:
    helm.sh/chart: common-test-1.0.4
    app.kubernetes.io/name: common-test
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: common-test
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: common-test
        app.kubernetes.io/instance: release-name
    spec:
      
      serviceAccountName: default
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      containers:
      - name: release-name-common-test
        image: "b4bz/homer:latest"
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        volumeMounts:
        
        livenessProbe:
          tcpSocket:
            port: http
          initialDelaySeconds: 0
          failureThreshold: 3
          timeoutSeconds: 1
          periodSeconds: 10
        readinessProbe:
          tcpSocket:
            port: http
          initialDelaySeconds: 0
          failureThreshold: 3
          timeoutSeconds: 1
          periodSeconds: 10
        startupProbe:
          tcpSocket:
            port: http
          initialDelaySeconds: 0
          failureThreshold: 30
          timeoutSeconds: 1
          periodSeconds: 5
---
# Source: common-test/templates/common.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-common-test
  labels:
    helm.sh/chart: common-test-1.0.4
    app.kubernetes.io/name: common-test
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
spec:
  rules:
    - host: "chart-example.local"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: release-name-common-test
                port:
                  number: 8080
